--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'  # Specify the Python version you want to use
-          
+
       - name: run python script
         run: python3 test.py
-    
+  test:
+    needs: build
+    runs-on: ubuntu-latest  
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+  
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.13'  # Specify the Python version you want to use
+  
+        - name: Run Python test
+          run: |
+            python -c 'import sys; sys.exit(0)  # Simulate a successful test'
