--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,38 @@ jobs:
         - name: Run Python test
           run: |
             python -c 'import sys; sys.exit(0)  # Simulate a successful test'
+
+  deploy:
+    needs: test
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    
+    environment: 
+        name: production
+        url: ${{ steps.deploy.outputs.page_url }}
+
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'  # Specify the Python version you want to use
+      - name: configure github pages
+        uses: actions/configure-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        #   publish_dir: ./docs  # Specify the directory to publish
+        #   publish_branch: gh-pages  # Specify the branch to publish to
+
+      - name: run python script
+        run: python3 test.py
+      - name: Deploy to GitHub Pages
+        id: deploy
+        uses: actions/deploy-pages@v4
