--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
       - name: run python script
         run: python3 test.py
       - name: upload artifacts
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-pages-artifact
       - name: Deploy to GitHub Pages
         id: deploy
         uses: actions/deploy-pages@v4
