--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,8 +66,12 @@ jobs:
 
       - name: run python script
         run: python3 test.py
+      - name: Create _site directory
+        run: mkdir -p _site && echo "Sample content" > _site/index.html
       - name: upload artifacts
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: _site
       - name: Deploy to GitHub Pages
         id: deploy
         uses: actions/deploy-pages@v4
